--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@leggnom/data-bridge",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "",
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
@@ -23,5 +23,18 @@
     "scripts": {
         "build": "rollup -c --bundleConfigAsCjs",
         "dev": "rollup -c -w --bundleConfigAsCjs"
+    },
+    "keywords": [
+        "postMessage",
+        "WebSocket",
+        "BroadcastChannel"
+    ],
+    "homepage": "",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/LegGnom/data-bridge"
+    },
+    "bugs": {
+        "url": "https://github.com/LegGnom/data-bridge/issues"
     }
 }
